# ikaruga

./: CMakeLists.txt  Doxyfile.in  README.md
cmake/: FindSDL2_MIXER.cmake
project organisation/: INF-CPP praktikum1.pptx  Side-Scroller.pod
res/advanced_settings/: bots.xml  items.xml  weapons.xml
res/images/: tileset_rocks_40x40.ti  tileset_space_40x40.ti  tileset_steal_40x40.ti
res/levels/: Assault.lvl  Assault.xml  Nax.lvl  Nax.xml  Path of revenge.lvl  Path of revenge.xml  Space Galaxy.lvl  Space Galaxy.xml  tricky tubes.lvl  tricky tubes.xml
res/profiles/: profiles.xml
src/editor/: CMakeLists.txt  GraphicsTileItem.cpp  GraphicsTileItem.hpp  LevelScene.cpp  LevelScene.hpp  LevelView.ui  Main.cpp  MainWindow.cpp  MainWindow.hpp  TextureScene.cpp  TextureScene.hpp
src/game/: Actor.cpp  Actor.hpp  AnimatedRenderable.cpp  AnimatedRenderable.hpp  Armed.cpp  Armed.hpp  BlasterWeapon.cpp  BlasterWeapon.hpp  Bot.cpp  Bot.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collidable.cpp  Collidable.hpp  CollisionManager.cpp  CollisionManager.hpp  CppWeapon.cpp  CppWeapon.hpp  Filesystem.cpp  Filesystem.hpp  FontRender.cpp  FontRender.hpp  Game.cpp  Game.hpp  HighScore.cpp  HighScore.hpp  KillAnimation.cpp  KillAnimation.hpp  LaserWeapon.cpp  LaserWeapon.hpp  Level.cpp  Level.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  MainWindow.cpp  MainWindow.hpp  MeatballWeapon.cpp  MeatballWeapon.hpp  (+42 more)
src/tests/: CMakeLists.txt  FilesystemTest.cpp
src/xml/: CMakeLists.txt  XML.cpp  XML.hpp  XmlTest.cpp
